# light_frame

./: CMakeLists.txt  STM32F103C8Tx.cmake
src/: commands_receiver.cpp  commands_receiver.h  light_selector.cpp  light_selector.h  main.cpp  print.cpp  print.h  stream.cpp  stream.h  string_builder.cpp  string_builder.h  timer_service.cpp  timer_service.h
src/modes/: light_frame_mode.cpp  light_frame_mode.h  magnet_calibration_mode.cpp  magnet_calibration_mode.h  mode_control.cpp  mode_control.h  simple_frame_mode.cpp  simple_frame_mode.h  sleep_mode.cpp  sleep_mode.h
src/platform/: adc_control.cpp  adc_control.h  buttons_control.cpp  buttons_control.h  communication_control.cpp  communication_control.h  dream_time.cpp  dream_time.h  hardware.h  led_control.cpp  led_control.h  magnet_control.cpp  magnet_control.h  platform_control.cpp  platform_control.h
